refactor: time buckets
