# server/libs/domain/src/index.ts
@@ -14,14 +14,15 @@ export * from './media';
 export * from './metadata';
 export * from './oauth';
 export * from './person';
+export * from './partner';
 export * from './search';
 export * from './server-info';
-export * from './partner';
 export * from './share';
 export * from './smart-info';
 export * from './storage';
 export * from './storage-template';
 export * from './system-config';
 export * from './tag';
+export * from './time-bucket';
 export * from './user';
 export * from './user-token';
